--- a/index.html
+++ b/index.html
@@ -1,20 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Insert Title Here</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="/assets/css/style.css"> 
+        <title>Minecraft</title>
+    </head>
 <body>
+
     <header>
-        <h1>My Website</h1>
+        <h1>Minecraft</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+            </ul>
+        </nav>
     </header>
-    <main>
-        <p>Insert Introduction Here</p>
-    </main>
-    <footer>
-        <p>Start Footer Here</p>
-    </footer>
+
+    <section id="home">
+        <h2>Welcome to Piper's website</h2>
+        <p>Totally not inspired by any upcoming movies 'cough,cough'</p>
+        <img src="https://static.wikia.nocookie.net/minecraft_gamepedia/images/1/12/Grass_Block_JE2.png/revision/latest?cb=20200830142618" alt="Grass minecraft block" width="300">
+        <p2> Minecraft was a big part of my childhood and i still play it regularly to this day, so of course it was one of the first options that came to mind. I have always loved being able to build whatever structure i like and being able to stretch my creativity to be able to work with the given blocks.</p2>
+    </section>
+
+    <section id="about">
+        <h2>About Minecraft</h2>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSg27738p8QdCwqMZ46gisrZ61g6gUxNNZs0Q&s" alt="Minecraft banner" width="600">
+        <p>Minecraft is an open world game where you run around creating anything you want and collecting food/resouces. To 'complete' the game you go to a realm called the end and fight the dragon. It is a cube based game so no circles exist inside the game. Minecraft is availabe on pretty much any device and is a fun game for all ages, with slight voilence but tollerable for younger ages. </p>
+    </section>
+
+
+
 </body>
 </html>
+
